# server/api/carecenter/controllers/services/router.ts
@@ -1,0 +1,5 @@
+import express from 'express';
+import controller from './controller';
+
+export default express.Router()
+    .get('/' , controller.services);
