# server/api/services/auth.service.ts
@@ -1,4 +1,4 @@
-import { Carecenter, MedicalServices , MedicalcenterInfo } from "../../../models";
+import { Carecenters, MedicalServices , MedicalcenterInfo } from "../../../models";
 import  GenerateToken  from '../../generateToken';
 import  emailConfig  from '../../emailconfig';
 const NodeRSA = require('node-rsa');
@@ -11,7 +11,7 @@ export class AuthService {
         //create user and return promise
         try{
             // get result if email already exists
-            var responses = await Carecenter.count({where:{ userName: data.userName }},{ plain: true }).then( (result) => {return(result)  } );
+            var responses = await Carecenters.count({where:{ userName: data.userName }},{ plain: true }).then( (result) => {return(result)  } );
             if(responses > 0) {                
                 let response = {
                     data: '',
@@ -20,7 +20,7 @@ export class AuthService {
                 }
                 return Promise.resolve(response);
             }
-                var users =  await Carecenter.create(data);               // insert carecenter data
+                var users =  await Carecenters.create(data);               // insert carecenter data
                 data.centerId = users.id;
                 var service =  await MedicalServices.create(data);    // insert service data
                 var info =  await MedicalcenterInfo.create(data);        // insert info data
@@ -48,8 +48,8 @@ export class AuthService {
             // const text = 'Hello RSA!';
             // const encrypted = key.encrypt(text, 'base64');
             // console.log('encrypted: ', encrypted);
-            const role = key.decrypt(data.role, 'utf8');
-            var usersdetail =  await Carecenter.findOne({where:{userName: data.userName,role: data.role}}).then(project => {
+          //  const role = key.decrypt(data.role, 'utf8');
+            var usersdetail =  await Carecenters.findOne({where:{userName: data.userName,role: data.role}}).then(project => {
                 if(project)
                 return project.get();
                });
@@ -84,12 +84,12 @@ export class AuthService {
       async forgetPassword (data: any){
         try{
            if(data.data.role!='patient'){
-            var usersdetail =  await Carecenter.findOne({where:{'email':data.data.email,'role':data.data.role}}).then(project => {
+            var usersdetail =  await Carecenters.findOne({where:{'email':data.data.email,'role':data.data.role}}).then(project => {
                 if(project)
                 return project.get();
                });      //return result for email id
             }else{
-                var usersdetail =  await Carecenter.findOne({where:{'email':data.data.email,'role':data.data.role}}).then(project => {
+                var usersdetail =  await Carecenters.findOne({where:{'email':data.data.email,'role':data.data.role}}).then(project => {
                     if(project)
                     return project.get();
                    }); 
